# scientific-programming-belto002

./: .breakpoints  .replit  New_Final_Exam  build_matrices.py  fifth_eigenvector.py  main.py  matrix_examples.py  population.txt  population_change.py  pyproject.toml  replit.nix  scipy  tenth_eigenvector.py
array_computing_and_curve_plotting/: animate_heat_wave.py  fill_arrays_by_for_loop.py  fill_arrays_vectorially.py  fill_gaussian_lists.py  plot_gaussian.py  plot_vertical_trajectory.py
beltoya_final_exam/: Beltoya_PHYS241FinalScript.py  calculate_bivariate_statistics.py  calculate_lowest_eigenvectors.py  calculate_quadratic_fit.py  equations_of_state.py  final_exam  fit_an_equation_of_state
computing_with-formulas/: compare_life_expectancy_to_seconds.py
computing_with_formulas/: add_two_numbers.py  calculate_ball_drag_and_gravity.py  calculate_displacement.py  calculate_egg_cook_time.py  calculate_gaussian_at_one_value.py  calculate_interest_growth.py  calculate_liter_mass.py  calculate_shape_regions.py  compare_life_expectancy_to_seconds.py  convert_length.py  print_hello_world.py  verify_binomial_expansions.py  verify_trigonometric_identity.py
dictionaries_and_strings/: compare_list_and_dictionary.py  create_constants_dictionary.py  create_stars_dictionary.py  generate_animation_report.py  hipparcos_data.txt  logarithmic_sum.py  make_hertzsprung_russel_diagram.py  plot_viscosities.py  read_and_plot_logarithmic_sum_output.py
final_exam_review/: annotate_plot.py  fit_curve_array.py  module_test_jackson.py  plot_data_with_fit.py  read_two_columns_text.py
(+27 files in other folders)
